--- a/index (2)/style.css
+++ b/index (2)/style.css
@@ -88,12 +88,12 @@ html, body{
  }
 
  div#mg2{
-   background-image: url(imagens/background001.jpg);
+   background-image: url(../img/background001.jpg);
    background-position: right center;
 
  }
  div#mg1{
-   background-image: url(imagens/background002.jpg);
+   background-image: url(../img/background002.jpg);
    background-position: right center;
  }
 
