--- a/index (2)/style.css
+++ b/index (2)/style.css
@@ -22,15 +22,18 @@ html, body{
    min-height: 100vh;
    background-color: darkgray;
    font-family: var(--fonte1);
+   
 }
 
  main{
-    background-color: black;
+    background-color: rgb(0, 0, 0);
+    background-attachment: fixed;
     color: aliceblue;
     text-align: center ;
  }
 
  main > h1{
+  background-attachment: fixed;
   padding: 10px;
     padding-top: 50px;
     font-variant: small-caps;
@@ -39,7 +42,7 @@ html, body{
  }
  main p {
    padding-bottom: 50px;
-   font-size: 2vw;
+   font-size: 1.5vw;
  }
  
  a{
